# credit-card-frauds

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pydocstyle  .yamllint  Makefile  README.md  bitbucket-pipelines.yml  deployment.json  kaggle.json.example  pyproject.toml  requirements.txt  ruff.toml  sample-request.json  training.json
.github/scripts/: check_branch_pr.js
.github/workflows/: dev-workflow.yaml  feature-branch.yaml  master-pull-request.yaml  pre-prod-workflow.yaml  prod-workflow.yaml
containers/: Dockerfile
containers/base/: .dockerignore  Dockerfile
containers/bitbucket-cicd/: Dockerfile
docs/: LINKS.md
notebooks/: 1-eda.ipynb  2-preprocessing.ipynb  3-train-evaluate.ipynb  5-deploy.ipynb  6-test.ipynb  99-test.ipynb  data_merge_wrangling.ipynb  feature_engineering.ipynb  test.ipynb  test_train_model.ipynb
scripts/: download_data.py  upload_data.py
src/: __version__.py
src/base/: model.py  preprocessing.py  utilities.py  visualisation.py
src/components/: README.md  dependencies.py
src/components/aiplatform/: __init__.py  delete_model.py  deploy_model.py  export_model.py  export_model.yaml  lookup_model.py  lookup_model.yaml  update_version_alias.py  upload_model.py  upload_model.yaml
src/components/bigquery/: __init__.py  dataset_to_table.py  dataset_to_table.yaml  execute_query.py  execute_query.yaml  query_to_table.py  query_to_table.yaml  table_to_dataset.py  table_to_dataset.yaml
src/components/data/: __init__.py  data_version.py  data_version.yaml
src/components/helpers/: __init__.py  copy_artifact.py  copy_artifact.yaml  get_current_time.py  get_current_time.yaml  merge_dictionaries.py  quote_csv_header.py  quote_csv_header.yaml  trigger_cicd.py  trigger_cicd.yaml
src/components/model/: __init__.py  compare.py  compare_champion_challenger.py  evaluate.py  evaluate.yaml  predict.py  predict.yaml  train.py  train.yaml  train_evaluate.py  (+1 more)
src/serving_api/: app.py  config.py  models.py
src/trigger/: app.py  config.py  main.py  models.py  utils.py
src/utils/: environment.py  logging.py  notebooks.py
terraform/: main.tf  provider.tf  variables.tf  versions.tf
tests/base/: test_model.py
tests/e2e/: test_e2e.py
tests/trigger/: test_main.py
(+30 files in other folders)
