[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$major.$minor.$patch"
update_changelog_on_bump = true
version_files = [
    "pyproject.toml:version",
    "src/__version__.py"
]

[tool.poetry]
name = "credit-card-frauds"
version = "0.1.0"
description = "Using Machine Learning to predict Credit Card Frauds."
authors = ["Roberto Fierimonte <roberto.fierimonte@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.10"
numpy = "==1.22"
numpy-financial = "==1.0.0"
pandas = "==1.4.3"
scikit-learn = "==1.1.2"
xgboost = "==1.6.1"
probatus = "==1.8.9"
imbalanced-learn = "==0.9.1"
optuna = "==3.0.3"
pandera = "~=0.6.5"
Jinja2 = ">3"
holidays = "^0.25"
loguru = "^0.7.0"
lightgbm = "^3.3.5"
kfp = "^2.0.0"
google-cloud-pipeline-components = "^2.0.0"
google-cloud-aiplatform = "^1.25.0"
google-cloud-storage = "^2.9.0"
google-cloud-bigquery = {version = "^3.10.0", extras = ["pandas"]}
google-cloud-logging = "^3.5.0"
pyarrow = "^6.0.0"
fsspec = "^2023.6.0"
gcsfs = "^2023.6.0"
tensorflow-data-validation = "^1.13.0"

[tool.poetry.group.base.dependencies]
numpy = "==1.22"
pandas = "==1.4.3"
scikit-learn = "==1.1.2"
xgboost = "==1.6.1"
imbalanced-learn = "==0.9.1"
loguru = "^0.7.0"
lightgbm = "^3.3.5"
pyarrow = "^6.0.0"
joblib = "^1.2.0"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
gunicorn = "^20.1.0"
pydantic = "^2.0.0"
google-cloud-storage = "^2.9.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.17.0"
pre-commit = "^2.20.0"
commitizen = "^2.37.0"
black = {version = "^22.10.0", allow-prereleases = true}
opendatasets = "^0.1.22"
requests = "<2.31.0"
matplotlib = "==3.5.1"
seaborn = "==0.12.1"
google-cloud-bigquery-storage = "^2.20.0"
mypy = "^1.4.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
xmlrunner = "^1.7.7"
unittest-xml-reporting = "^3.2.0"
coverage = "^7.2.7"

[tool.poetry.group.cicd.dependencies]
pre-commit = "^2.20.0"
loguru = "^0.7.0"
gitpython = "^3.1.31"
python-dotenv = "^1.0.0"
Jinja2 = ">3"
kfp = "^2.0.0"
google-cloud-pipeline-components = "^2.0.0"
google-cloud-aiplatform = "^1.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
